# shared-clipboard

./: .gitignore  README.md  flake.nix  package-lock.json  package.json  pyproject.toml
.github/workflows/: main.yml
backend/: pyproject.toml
backend/src/: firewall.py  listener.py  main.py  server.py  service.py
src/: app.css  app.html  main.py  pubspec.yaml
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  macos.json
src-tauri/icons/: icon.icns
src-tauri/src/: clip.rs  clip_item.rs  clipboard_manager.rs  commands.rs  contents.rs  fs.rs  handler.rs  item.rs  lib.rs  main.rs  manager.rs  watcher.rs
src-tauri/src/clipboard_files/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/hook_manager/: macos.rs  mod.rs  windows.rs
src-tauri/src/position_window/: macos.rs  mod.rs  windows.rs
src/lib/: ClipboardItem.svelte  Contents.ts  Item.svelte  Select.svelte.ts  State.svelte.ts  main.dart
src/lib/src/rust/: frb_generated.dart
src/linux/flutter/: generated_plugins.cmake
src/macos/Runner.xcodeproj/: project.pbxproj
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/(app)/: +layout.svelte
src/routes/(app)/history/: +page.svelte
src/routes/(app)/pinned/: +page.svelte
src/routes/history/: +page.svelte
src/routes/myclipboard/: +page.svelte
src/routes/otherdevices/: +page.svelte
src/routes/permissions/: +page.svelte
src/routes/pinned/: +page.svelte
src/rust/: Cargo.toml
src/rust_builder/: pubspec.yaml
src/rust_builder/android/: build.gradle  settings.gradle
src/rust_builder/android/src/main/: AndroidManifest.xml
src/rust_builder/ios/: rust_lib_src.podspec
src/rust_builder/linux/: CMakeLists.txt
src/rust_builder/macos/: rust_lib_src.podspec
src/rust_builder/windows/: CMakeLists.txt
src/windows/flutter/: generated_plugins.cmake
