[package]
name = "purple"
version = "0.1.0"
description = "Clipboard Manager that can share across local networks"
authors = ["Andrew Yurovchak"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "purple_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
clipboard-master = "3.1.3"
image = "0.25.6"
base64 = "0.22.1"
thiserror = "2.0.12"
tauri-plugin-log = "2"
log = "0.4.27"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
anyhow = "1.0.98"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_UI_Shell",
  "Win32_UI_Accessibility"
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.3", default-features = false }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSGeometry"] }
objc2-core-foundation = { version = "0.3.2", default-features = false, features = ["CFMachPort", "CFString", "objc2"] }
objc2-core-graphics = { version = "0.3.2", default-features = false, features = ["CGEventTypes", "CGEventSource", "CGEvent", "CGRemoteOperation", "CGGeometry"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSScreen"] }
objc2-application-services = { version = "0.3.2", default-features = false, features = ["AXUIElement", "HIServices", "AXError", "AXValue"] }
tauri-plugin-macos-permissions = "2.3.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
